2002-11-06  Daniel Stodden <stodden@in.tum.de>

	* ListDictionary.cs:
		- Filled in missing CopyTo()s.
		- No, overwriting an entry should not change the Count <:)

2002-10-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NameValueCollection.cs: fixed Add (NameValueCollection).

2002-09-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StringCollection.cs: fixes bug #29791. Thanks to Marcus Urban
	(mathpup@mylinuxisp.com).

2002-07-22  Tim Coleman <tim@timcoleman.com>
	* NameObjectCollectionBase.cs: added iterator stubb to 
		NameObjectCollectionBase.KeysCollection

2002-07-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HybridDictionary.cs:
	(Remove): fixed. The value is either in the list or in the hash.

2002-06-24  Andrew Birkett <adb@tardis.ed.ac.uk>

	* BitVector32.cs: Implemented 'set' section indexer.  Check for
	overly large sections.	Factored out some helper methods. 

2002-05-11  Lawrence Pit <loz@cable.a2000.nl>

	* NameValueCollection.AsStringArray: fixed ArgumentNullException bug.

2002-05-10  Lawrence Pit <loz@cable.a2000.nl>

	* HybridDictionary.cs: implemented
	* CollectionsUtil.cs: implemented
	* BitVector32.cs: implemeneted
	* Modified signature of method ListDictionary.GetEnumerator 

Fri Feb 8 18:02:50 CET 2002 Paolo Molaro <lupus@ximian.com>

	* NameObjectCollectionBase.cs, NameValueCollection.cs: tweaks to make
	it compile and provide the constructor needed by nunitcore.

2002-01-05  Ravi Pratap  <ravi@ximian.com>

	* BitVector32.cs, ListDictionary.cs : MonoTODO everywhere!

	* NameObjectCollectionBase.cs, NameValueCollection.cs : Ditto.

2001-08-24  Nick Drochak  <ndrochak@gol.com>
	* NameObjectCollectionBase.cs: Add stub implementation
	* common.src: Add NameObjectCollectionBase to the build
	* NameValueCollection.cs: add 'override' to CopyTo().  Maybe
		this code actually belongs in the superclass.

2001-08-24  Miguel de Icaza  <miguel@ximian.com>

	* common.src: Add NameValueCollection.cs to the build
