@@ -1,3 +1,7 @@
+2003-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* StringCollection.cs: fixed range checks in CopyTo.
+
 2002-11-06  Daniel Stodden <stodden@in.tum.de>
 
 	* ListDictionary.cs:
